# ocaml-cordova

./: cordova.opam
src/: cordova.mli  dune
