opam-version: "2.0"
maintainer:   "Danny Willems <contact@danny-willems.be>"
authors:      "Danny Willems <contact@danny-willems.be>"
homepage:     "https://github.com/dannywillems/ocaml-cordova"
bug-reports:  "https://github.com/dannywillems/ocaml-cordova/issues"
dev-repo:     "https://github.com/dannywillems/ocaml-cordova"
license:      "LGPL-3.0 with OCaml linking exception"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.03.0" }
  "dune" {>= "2.8"}
  "gen_js_api"
  "js_of_ocaml-ppx" {>= "3.8.0" & "3.9.0"}
]
